:art: Fix previous z-index with modals

--- a/octoprint_touchui/static/less/touchui.bundled.less
+++ b/octoprint_touchui/static/less/touchui.bundled.less
@@ -601,7 +601,7 @@ color: @main-color;
 padding: 0;
 margin: 0;
 position: relative;
-z-index: 9999;
+z-index: 1000;
 white-space: nowrap;
 text-align: right;
 &:active {
