--- a/source/less/layout/header.less
+++ b/source/less/layout/header.less
@@ -31,7 +31,7 @@
 		margin: 0;
 
 		position: relative;
-		z-index: 9999;
+		z-index: 1000;
 		white-space: nowrap;
 		text-align: right;
 
